// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpentFilter renders component 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="title-mock"
      variant="body2"
    >
      Ad spend
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(Slider))
      handleOnChange={[MockFunction]}
      max={100}
      maxLabel="$max"
      min={0}
      minLabel="$0"
      title="Min threshold"
      value={20}
    />
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`SpentFilter renders component when max/inf 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="title-mock"
      variant="body2"
    >
      Ad spend
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(Slider))
      handleOnChange={[MockFunction]}
      max={100}
      maxLabel="$max"
      min={0}
      minLabel="$0"
      title="Min threshold"
      value={100}
    />
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
